// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button with new info 1`] = `
<div>
  <div
    style="position:relative;z-index:0"
  >
    <div
      title="the best container ever"
    >
      <span>
        click the 
        <span
          style="font-family:sans-serif;font-size:12px;text-decoration:none;background:rgb(34, 136, 204);color:rgb(255, 255, 255);padding:5px 15px;margin:10px;border-radius:0px 0px 0px 5px"
        >
           Show Info 
        </span>
         label in top right for info about "with new info"
      </span>
    </div>
  </div>
  <button
    class="info__show-button"
    style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
    type="button"
  >
    Show Info
  </button>
  <div
    class="info__overlay"
    style="position:fixed;background:white;top:0;bottom:0;left:0;right:0;padding:0 40px;overflow:auto;z-index:99999;display:none"
  >
    <button
      class="info__close-button"
      style="font-family:sans-serif;font-size:12px;display:block;position:fixed;border:none;background:#28c;color:#fff;padding:5px 15px;cursor:pointer;top:0;right:0;border-radius:0 0 0 5px"
      type="button"
    >
      ×
    </button>
    <div>
      <div
        style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-weight:300;line-height:1.45;font-size:15px;border:1px solid #eee;padding:20px 40px 40px;border-radius:2px;background-color:#fff;margin-top:20px;margin-bottom:20px"
      >
        <div
          style="border-bottom:1px solid #eee;padding-top:10px;margin-bottom:10px"
        >
          <h1
            style="margin:0;padding:0;font-size:35px"
          >
            Button
          </h1>
          <h2
            style="margin:0 0 10px 0;padding:0;font-weight:400;font-size:22px"
          >
            with new info
          </h2>
        </div>
        <div
          style="margin-bottom:0"
        >
          <div
            style="font-family:-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif;color:#444;-webkit-font-smoothing:antialiased;font-size:15px"
          >
            Use the 
            <a
              href="https://github.com/storybooks/storybook/tree/master/addons/info"
              rel="noopener noreferrer"
              style="color:#3498db"
              target="_blank"
            >
              info addon
            </a>
             with its new painless API.
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Story Source
          </h1>
          <div
            class="css-fri0s0-Wrapper epklh870"
          >
            <div
              class="css-1et2y5f-Scroller epklh871"
            >
              <pre
                class="hljs css-1x8ad3z-Pre epklh872"
              >
                <code
                  class="css-1igagyr-Code epklh873"
                >
                  <span
                    class="token tag"
                  >
                    <span
                      class="token tag"
                    >
                      <span
                        class="token punctuation"
                      >
                        &lt;
                      </span>
                      Container
                    </span>
                    <span
                      class="token punctuation"
                    >
                      &gt;
                    </span>
                  </span>
                  <span
                    class="token plain-text"
                  >
                    
  
                  </span>
                  <span
                    class="token tag"
                  >
                    <span
                      class="token tag"
                    >
                      <span
                        class="token punctuation"
                      >
                        &lt;
                      </span>
                      span
                    </span>
                    <span
                      class="token punctuation"
                    >
                      &gt;
                    </span>
                  </span>
                  <span
                    class="token plain-text"
                  >
                    
    click the 
    
                  </span>
                  <span
                    class="token tag"
                  >
                    <span
                      class="token tag"
                    >
                      <span
                        class="token punctuation"
                      >
                        &lt;
                      </span>
                      InfoButton
                    </span>
                     
                    <span
                      class="token punctuation"
                    >
                      /&gt;
                    </span>
                  </span>
                  <span
                    class="token plain-text"
                  >
                    
     label in top right for info about "with new info"
  
                  </span>
                  <span
                    class="token tag"
                  >
                    <span
                      class="token tag"
                    >
                      <span
                        class="token punctuation"
                      >
                        &lt;/
                      </span>
                      span
                    </span>
                    <span
                      class="token punctuation"
                    >
                      &gt;
                    </span>
                  </span>
                  <span
                    class="token plain-text"
                  >
                    

                  </span>
                  <span
                    class="token tag"
                  >
                    <span
                      class="token tag"
                    >
                      <span
                        class="token punctuation"
                      >
                        &lt;/
                      </span>
                      Container
                    </span>
                    <span
                      class="token punctuation"
                    >
                      &gt;
                    </span>
                  </span>
                  

                </code>
              </pre>
            </div>
          </div>
        </div>
        <div>
          <h1
            style="margin:20px 0 0 0;padding:0 0 5px 0;font-size:25px;border-bottom:1px solid #EEE"
          >
            Prop Types
          </h1>
          <div>
            <h3
              style="margin:20px 0 0 0"
            >
              "Container" Component
            </h3>
            <table
              class="css-78s6dx-Table-Table e1fg2ikb0"
            >
              <thead
                class="css-ig77mj-THead e1fg2ikb1"
              >
                <tr>
                  <th
                    class="css-tfinoa-Th-TH e1fg2ikb2"
                  >
                    Property
                  </th>
                  <th
                    class="css-tfinoa-Th-TH e1fg2ikb2"
                  >
                    Type
                  </th>
                  <th
                    class="css-tfinoa-Th-TH e1fg2ikb2"
                  >
                    Required
                  </th>
                  <th
                    class="css-tfinoa-Th-TH e1fg2ikb2"
                  >
                    Default
                  </th>
                  <th
                    class="css-tfinoa-Th-TH e1fg2ikb2"
                  >
                    Description
                  </th>
                </tr>
              </thead>
              <tbody
                class="css-4b5un0-TBody e1fg2ikb3"
              >
                <tr
                  class="css-rss5jh-TBodyTR e1fg2ikb4"
                >
                  <td
                    class="css-xo96b9-Td-TD-TDName e1fg2ikb6"
                  >
                    children
                  </td>
                  <td
                    class="css-1vrb3fi-Td-TD-TDType e1fg2ikb7"
                  >
                    <span>
                      node
                    </span>
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    yes
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    -
                  </td>
                  <td
                    class="css-qkhvtu-Td-TD e1fg2ikb5"
                  />
                </tr>
                <tr
                  class="css-rss5jh-TBodyTR e1fg2ikb4"
                >
                  <td
                    class="css-xo96b9-Td-TD-TDName e1fg2ikb6"
                  >
                    isAmazing
                  </td>
                  <td
                    class="css-1vrb3fi-Td-TD-TDType e1fg2ikb7"
                  >
                    <span>
                      bool
                    </span>
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    -
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    <span>
                      false
                    </span>
                  </td>
                  <td
                    class="css-qkhvtu-Td-TD e1fg2ikb5"
                  />
                </tr>
                <tr
                  class="css-rss5jh-TBodyTR e1fg2ikb4"
                >
                  <td
                    class="css-xo96b9-Td-TD-TDName e1fg2ikb6"
                  >
                    age
                  </td>
                  <td
                    class="css-1vrb3fi-Td-TD-TDType e1fg2ikb7"
                  >
                    <span>
                      other
                    </span>
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    -
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    <span>
                      {
                      <span>
                        <span>
                          isOld
                        </span>
                      </span>
                      : 
                      <span>
                        false
                      </span>
                      ,
                      <span>
                        <span>
                          value
                        </span>
                      </span>
                      : 
                      <span>
                        0
                      </span>
                      }
                    </span>
                  </td>
                  <td
                    class="css-qkhvtu-Td-TD e1fg2ikb5"
                  />
                </tr>
                <tr
                  class="css-rss5jh-TBodyTR e1fg2ikb4"
                >
                  <td
                    class="css-xo96b9-Td-TD-TDName e1fg2ikb6"
                  >
                    title
                  </td>
                  <td
                    class="css-1vrb3fi-Td-TD-TDType e1fg2ikb7"
                  >
                    <span>
                      string
                    </span>
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    -
                  </td>
                  <td
                    class="css-icf93m-Td-TD e1fg2ikb5"
                  >
                    <span>
                      the best container ever
                    </span>
                  </td>
                  <td
                    class="css-qkhvtu-Td-TD e1fg2ikb5"
                  />
                </tr>
              </tbody>
            </table>
          </div>
          <div>
            <h3
              style="margin:20px 0 0 0"
            >
              "InfoButton" Component
            </h3>
            <small>
              No propTypes defined!
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button with notes 1`] = `
<button
  style="border:1px solid #eee;border-radius:3px;background-color:#FFFFFF;cursor:pointer;font-size:15px;padding:3px 10px;margin:10px"
  type="button"
>
  Check my notes in the notes panel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  style="border:1px solid #eee;border-radius:3px;background-color:#FFFFFF;cursor:pointer;font-size:15px;padding:3px 10px;margin:10px"
  type="button"
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Button with text 1`] = `
<button
  style="border:1px solid #eee;border-radius:3px;background-color:#FFFFFF;cursor:pointer;font-size:15px;padding:3px 10px;margin:10px"
  type="button"
>
  Hello Button
</button>
`;
